--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     <finalName>java-web</finalName>
     <plugins>
     	<plugin>
-    	    <groupId>org.apache.tomcat.maven</groupId>
-    	    <artifactId>tomcat7-maven-plugin</artifactId>
-    	    <version>2.2</version>
+    	    <groupId>org.opoo.maven</groupId>
+    	    <artifactId>tomcat9-maven-plugin</artifactId>
+    	    <version>3.0.1</version>
     	    <configuration>
     	        <url>http://localhost:8080/manager/text</url>
     	        <server>TomcatServer</server>
